Only show Time Zone Warning on screens with times

--- a/MyHome/app/src/main/res/layout/book_select_time.xml
+++ b/MyHome/app/src/main/res/layout/book_select_time.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingLeft="18dp"
-    android:paddingRight="18dp">
+    android:paddingRight="18dp"
+    tools:ignore="HardcodedText">
 
     <include
         android:id="@+id/date_header"
