Talkback bug fixes Bug Id : 2863918,2868001,2863923

--- a/MyHome/app/src/main/res/layout/activity_forgot_password.xml
+++ b/MyHome/app/src/main/res/layout/activity_forgot_password.xml
@@ -73,6 +73,7 @@
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/prompt_email"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1"
@@ -93,6 +94,7 @@
             android:layout_marginLeft="42dp"
             android:layout_marginRight="42dp"
             android:layout_marginTop="24dp"
+            android:contentDescription="@string/action_reset_password"
             android:onClick="@{handlers::onClickEvent}"
             android:text="@string/action_reset_password"
             android:textStyle="bold" />
