--- a/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
+++ b/MyHome/app/src/main/res/layout/fragment_change_passowrd.xml
@@ -84,6 +84,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:paddingTop="10dp"
+                android:contentDescription="@string/requirements_for_a_safe_password"
                 android:src="@mipmap/tooltip" />
         </RelativeLayout>
 
