--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -41,6 +41,7 @@
                         android:id="@+id/firstName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/prompt_first_name"
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                         android:ellipsize="end"
                         android:hint="@string/prompt_first_name"
@@ -69,6 +70,7 @@
                         android:id="@+id/lastName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/prompt_last_name"
                         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ- "
                         android:ellipsize="end"
                         android:hint="@string/prompt_last_name"
@@ -97,6 +99,7 @@
                         android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/prompt_email"
                         android:hint="@string/prompt_email"
                         android:imeOptions="actionNext"
                         android:inputType="textEmailAddress"
@@ -128,6 +131,7 @@
                             android:id="@+id/password"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:contentDescription="@string/prompt_password"
                             android:drawableRight="@mipmap/hide_password"
                             android:hint="@string/prompt_password"
                             android:imeOptions="actionNext"
@@ -150,6 +154,7 @@
                         android:onClick="@{handlers::onClickEvent}"
                         android:paddingLeft="8dp"
                         android:paddingRight="8dp"
+                        android:contentDescription="@string/requirements_for_a_safe_password"
                         android:src="@mipmap/tooltip" />
                 </RelativeLayout>
 
@@ -168,6 +173,7 @@
                         android:id="@+id/re_enter_password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:contentDescription="@string/prompt_re_enter_password"
                         android:hint="@string/prompt_re_enter_password"
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
