--- a/MyHome/app/src/main/res/layout/fragment_filter.xml
+++ b/MyHome/app/src/main/res/layout/fragment_filter.xml
@@ -238,6 +238,7 @@
                                 style="@style/tradeGothicLTStd_Dynamic18"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:contentDescription="@string/accepting_new_patients"
                                 android:textAlignment="textEnd" />
 
                             <TextView
