--- a/MyHome/app/src/main/res/layout/fragment_touch_id.xml
+++ b/MyHome/app/src/main/res/layout/fragment_touch_id.xml
@@ -27,6 +27,7 @@
                 style="@style/tradeGothicLTStd_Dynamic18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/touch_id_title"
                 android:textAlignment="textEnd" />
 
             <TextView
