Bug Id : 2868053 Talkback: Registration: Toggle button "Password visibility" is not focusable is fixed

--- a/MyHome/app/src/main/res/layout/fragment_enrollment.xml
+++ b/MyHome/app/src/main/res/layout/fragment_enrollment.xml
@@ -125,7 +125,9 @@
                         android:layout_toLeftOf="@+id/password_criteria"
                         app:errorEnabled="true"
                         app:errorTextAppearance="@style/error_appearance"
-                        app:hintTextAppearance="@style/hint_appearance">
+                        app:hintTextAppearance="@style/hint_appearance"
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/primary">
 
                         <android.support.design.widget.TextInputEditText
                             android:id="@+id/password"
