--- a/MyHome/app/src/main/res/layout/book_select_status.xml
+++ b/MyHome/app/src/main/res/layout/book_select_status.xml
@@ -13,27 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/booking_select_status_header" />
+        android:text="Appointment types" />
 
-    <Button
-        android:id="@+id/book_new"
-        style="@style/selectableButtonStyle"
+    <LinearLayout
+        android:id="@+id/appointment_type_layout"
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="18dp"
-        android:gravity="center"
-        android:text="@string/yes"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/book_existing"
-        style="@style/selectableButtonStyle"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_marginTop="18dp"
-        android:gravity="center"
-        android:text="@string/no"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+    </LinearLayout>
 
     <TextView
         android:id="@+id/no_times_available"
