my care Intake flow

--- a/MyHome/app/src/main/res/layout/profile_view.xml
+++ b/MyHome/app/src/main/res/layout/profile_view.xml
@@ -159,8 +159,9 @@
             <Button
                 android:id="@+id/videoVisit"
                 style="@style/enableButtonStyle"
-                android:layout_width="255dp"
-                android:layout_height="45dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/profile_label_marginBottom"
                 android:text="Video Visit" />
