--- a/MyHome/app/src/main/res/menu/navigation_menu.xml
+++ b/MyHome/app/src/main/res/menu/navigation_menu.xml
@@ -23,6 +23,6 @@
     <item
         android:id="@+id/profile"
         android:icon="@drawable/profile"
-        android:title="@string/profile"
+        android:title="@string/mycare_now"
         app:showAsAction="ifRoom" />
 </menu>
