--- a/MyHome/app/src/main/res/layout/stats_profile.xml
+++ b/MyHome/app/src/main/res/layout/stats_profile.xml
@@ -141,6 +141,7 @@
 
     <TextView
         android:id="@+id/label_locations"
+        android:layout_marginTop="24dp"
         style="@style/tradeGothicLTStd_Dynamic20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
