--- a/MyHome/app/src/main/res/layout/content_visit_cost.xml
+++ b/MyHome/app/src/main/res/layout/content_visit_cost.xml
@@ -103,7 +103,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/coupon_code_text_layout"
