--- a/MyHome/app/src/main/res/layout/fragment_medical_history.xml
+++ b/MyHome/app/src/main/res/layout/fragment_medical_history.xml
@@ -5,49 +5,51 @@
     tools:context="com.prokarma.myhome.features.mycare.MyCareNowFragment">
 
     <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content">-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content">-->
 
-        <RelativeLayout
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/myCareDesc"
+            style="@style/tradeGothicLTStd_Dynamic18"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="34dp"
+            android:text="@string/history_desc"
+            android:textColor="@color/grey" />
 
-            <TextView
-                android:id="@+id/myCareDesc"
-                style="@style/tradeGothicLTStd_Dynamic18"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="34dp"
-                android:text="@string/history_desc"
-                android:textColor="@color/grey" />
+        <View
+            android:id="@+id/lineTop"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@+id/myCareDesc"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
+            android:background="@color/db_white" />
 
-            <View
-                android:id="@+id/lineTop"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/myCareDesc"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="30dp"
-                android:background="@color/db_white" />
-
-            <ExpandableListView
-                android:id="@+id/expandableList"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/lineTop"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="2dp"
-                android:focusable="true"
-                android:groupIndicator="@null"
-                android:nestedScrollingEnabled="true"
-                android:textAlignment="viewStart"
-                android:visibility="gone" />
-        </RelativeLayout>
+        <ExpandableListView
+            android:id="@+id/expandableList"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/lineTop"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="2dp"
+            android:focusable="true"
+            android:groupIndicator="@null"
+            android:nestedScrollingEnabled="true"
+            android:textAlignment="viewStart"
+            android:visibility="gone" />
+    </RelativeLayout>
     <!--</ScrollView>-->
 
     <ProgressBar
