--- a/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,6 +6,7 @@
     tools:context="com.televisit.services.MyCareServicesFragment">
 
     <TextView
+        android:id="@+id/desc"
         style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,15 +17,16 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/providerList"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/desc"
         android:layout_marginLeft="24dp" />
 
     <ProgressBar
         android:id="@+id/providers_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:layout_marginBottom="8dp"
         android:indeterminate="true"
-        android:visibility="gone" />
-</LinearLayout>
+        android:visibility="visible" />
+</RelativeLayout>
