--- a/MyHome/app/src/main/res/layout/book_calendar.xml
+++ b/MyHome/app/src/main/res/layout/book_calendar.xml
@@ -3,24 +3,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingLeft="18dp"
-    android:paddingRight="18dp">
+    android:orientation="vertical">
 
-    <include
-        android:id="@+id/date_header"
-        layout="@layout/book_date_header" />
-
-    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-        android:id="@+id/calendar"
+    <LinearLayout
+        android:id="@+id/normal_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:mcv_arrowColor="@color/primary"
-        app:mcv_dateTextAppearance="@style/DayTextAppearance"
-        app:mcv_headerTextAppearance="@null"
-        app:mcv_showOtherDates="out_of_range"
-        app:mcv_titleAnimationOrientation="horizontal"
-        app:mcv_weekDayTextAppearance="@style/WeekDayTextAppearance" />
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingLeft="18dp"
+        android:paddingRight="18dp">
 
+        <include
+            android:id="@+id/date_header"
+            layout="@layout/book_date_header" />
+
+        <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+            android:id="@+id/calendar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:mcv_arrowColor="@color/primary"
+            app:mcv_dateTextAppearance="@style/DayTextAppearance"
+            app:mcv_headerTextAppearance="@null"
+            app:mcv_showOtherDates="out_of_range"
+            app:mcv_titleAnimationOrientation="horizontal"
+            app:mcv_weekDayTextAppearance="@style/WeekDayTextAppearance" />
+
+    </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/loading_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="8dp"
+        android:gravity="center_horizontal"
+        android:indeterminate="true"
+        android:visibility="visible" />
 </LinearLayout>
