--- a/MyHome/app/src/main/res/layout/book_date_header.xml
+++ b/MyHome/app/src/main/res/layout/book_date_header.xml
@@ -18,9 +18,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/date"
+        android:layout_alignParentStart="true"
         android:layout_alignTop="@id/date"
-        android:layout_marginRight="42dp"
-        android:layout_toLeftOf="@id/date"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:src="@mipmap/arrow_left" />
@@ -30,9 +29,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/date"
+        android:layout_alignParentEnd="true"
         android:layout_alignTop="@id/date"
-        android:layout_marginLeft="42dp"
-        android:layout_toRightOf="@id/date"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:src="@mipmap/arrow_right" />
