Added a Developer Option to Show More Details when an API Error Message Occurs

--- a/MyHome/app/src/main/res/layout/api.xml
+++ b/MyHome/app/src/main/res/layout/api.xml
@@ -16,6 +16,33 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="6dp"
+            android:text="Show More API Error Info"
+            android:textStyle="bold" />
+
+        <TextView
+            style="@style/tradeGothicLTStdLight_14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
+            android:text="If this is toggled on, a button will show with the API Error message to allow you to view more details. This is defaulted to off in production." />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/show_api_error_info_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="6dp"
+            android:background="@color/secondary_text" />
+
+        <TextView
+            style="@style/tradeGothicLTStd_Dynamic18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="6dp"
             android:text="Sign In API"
             android:textStyle="bold" />
 
