--- a/MyHome/app/src/main/res/layout/provider_plan_spinner_item.xml
+++ b/MyHome/app/src/main/res/layout/provider_plan_spinner_item.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee"
-    android:maxLines="1"
     android:padding="4dp"
+    android:singleLine="true"
     android:textAlignment="inherit"
     android:textColor="@color/text_darker" />
