--- a/MyHome/app/src/main/res/layout/activity_splash.xml
+++ b/MyHome/app/src/main/res/layout/activity_splash.xml
@@ -1,44 +1,39 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.prokarma.myhome.app.SplashActivity">
 
-    <RelativeLayout
+    <ImageView
+        android:id="@+id/login_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:layout_marginBottom="32dp"
+        android:layout_marginTop="52dp"
+        android:src="@mipmap/new_logo" />
+
+    <ProgressBar
+        android:id="@+id/splash_progress"
+        style="@style/tradeGothicLTStdLight_14"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_logo"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="8dp"
+        android:indeterminate="true"
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/splashRefresh"
+        style="@style/tradeGothicLTStd_Dynamic18"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/login_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            android:layout_marginBottom="32dp"
-            android:layout_marginTop="52dp"
-            android:src="@mipmap/new_logo" />
-
-        <ProgressBar
-            android:id="@+id/splash_progress"
-            style="@style/tradeGothicLTStdLight_14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/login_logo"
-            android:layout_centerInParent="true"
-            android:layout_marginBottom="8dp"
-            android:indeterminate="true"
-            android:visibility="visible" />
-
-        <TextView
-            android:id="@+id/splashRefresh"
-            style="@style/tradeGothicLTStd_Dynamic18"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_horizontal"
-            android:padding="16dp"
-            android:text="@string/click_to_refresh"
-            android:textColor="@color/accent"
-            android:visibility="gone" />
-    </RelativeLayout>
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="center_horizontal"
+        android:padding="16dp"
+        android:text="@string/click_to_refresh"
+        android:textColor="@color/accent"
+        android:visibility="gone" />
+</RelativeLayout>
