--- a/MyHome/app/src/main/res/layout/activity_update.xml
+++ b/MyHome/app/src/main/res/layout/activity_update.xml
@@ -29,6 +29,7 @@
     </LinearLayout>
 
     <LinearLayout
+        style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -37,6 +38,7 @@
 
         <Button
             android:id="@+id/cancel_update"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -47,6 +49,7 @@
 
         <Button
             android:id="@+id/ok_update"
+            style="?android:attr/buttonBarButtonStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
