--- a/MyHome/app/src/main/res/layout/activity_verify.xml
+++ b/MyHome/app/src/main/res/layout/activity_verify.xml
@@ -6,11 +6,12 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <include
