--- a/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
+++ b/MyHome/app/src/main/res/layout/fragment_my_care_providers.xml
@@ -7,19 +7,29 @@
 
     <TextView
         android:id="@+id/desc"
-        style="@style/tradeGothicLTStd_Dynamic18"
-        android:layout_width="match_parent"
+        style="@style/tradeGothicLTStd_Dynamic20"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:text="@string/my_care_providers_desc"
-        android:textColor="@color/grey" />
+        android:layout_margin="18dp"
+        android:lineSpacingExtra="3dp"
+        android:text="@string/my_care_providers_desc" />
+
+    <Button
+        android:id="@+id/btn_next_avail_provider"
+        style="@style/db_scheduleButtonStyle"
+        android:layout_width="285dp"
+        android:layout_height="45dp"
+        android:layout_below="@id/desc"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/next_available_provider" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/providerList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/desc"
-        android:layout_marginLeft="24dp" />
+        android:layout_below="@+id/btn_next_avail_provider" />
 
     <ProgressBar
         android:id="@+id/providers_progress"
